--- a/ver641/641_yang_list.html
+++ b/ver641/641_yang_list.html
@@ -5,7 +5,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#157878">
-    <link rel="stylesheet" href="./assets/css/style.css?v=">
+    <link rel="stylesheet" href="../assets/css/style.css?v=">
   </head>
   <body>
     <section class="page-header">
