--- a/ver651/651_yang_list.html
+++ b/ver651/651_yang_list.html
@@ -5,7 +5,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#157878">
-    <link rel="stylesheet" href="../assets/css/style.css?v=">
+    <link rel="stylesheet" href="/assets/css/style.css?v=">
   </head>
   <body>
     <section class="page-header">
@@ -13,9 +13,7 @@
     </section>
 
     <section class="main-content">
-      <p><a href="../">back</a><br /></p>
-
-<h2>Configuration Models</h2>
+      <h2>Configuration Models</h2>
 
 <p><a href="./Ethernet-SPAN-cfg.html">ethernet-span</a><br />
 <a href="./aaa-lib-cfg.html">aaa-lib</a><br />
@@ -136,8 +134,6 @@
 <a href="./tunnel-l2tun-cfg.html">tunnel-l2tun</a><br />
 <a href="./vservice-cfg.html">vservice</a><br />
 <a href="./watchd-cfg.html">watchd</a><br /></p>
-
-<p><a href="../">back</a><br /><br /></p>
 
     </section>
   </body>
